--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
   The STM32-base project is meant for students and hobbyists. The goal of the
   STM32-base project is to provide a simple and easy to use base project for
   working with STM32 microcontrollers.
-baseurl: "/STM32-base.github.io/"
+baseurl: /STM32-base.github.io
 
 mainMenu:
   - name: "Home"
