--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+baseurl: /STM32-base-cryptoguide
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
@@ -9,7 +11,6 @@ description: >
   The STM32-base project is meant for students and hobbyists. The goal of the
   STM32-base project is to provide a simple and easy to use base project for
   working with STM32 microcontrollers.
-baseurl: /STM32-base.github.io
 
 mainMenu:
   - name: "Home"
