--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 domain: 3rditeration.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://3rditeration.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: //STM32-base-cryptoguide/     # place folder name if the site is served in a subfolder
+baseurl: /STM32-base-cryptoguide     # place folder name if the site is served in a subfolder
 
 plugins:
   - jekyll-feed
